--- a/week01/index.html
+++ b/week01/index.html
@@ -72,7 +72,4 @@
 
 <p><em>Buyer:</em> "Can't you see that everyone is buying station wagons?"</p>
 
-Copyright © 1999 by Neal Stephenson
-
-</body>
-</html>
+<p>Copyright © 1999 by Neal Stephenson</p>
