--- a/week02/index.html
+++ b/week02/index.html
@@ -1,11 +1,10 @@
 <html>
 <a href="https://codepen.io/deuce31dee/pen/BaKmNYJ">Link</a>
-</html>
 
 <br>
 
 <img src="https://deuce31dee.github.io/week02/2.3html.jpg"
-     alt="An annoying man on a desk screaming with a black belt on"
+     alt="An annoying man on a desk screaming with a black belt on."
      width="600" height="500">
 
-<br>
+</html>
